--- a/user/Makefile
+++ b/user/Makefile
@@ -8,7 +8,7 @@ ASFLAGS = -m32
 CFLAGS = -m32 -Wall -g -fno-stack-protector -nostdinc -fno-pie -I src/include
 LDFLAGS = -melf_i386 -Tsrc/user.ld
 
-test.bin: $(OBJS)
+../test.bin: $(OBJS)
 	$(LD) $(LDFLAGS) -o $@ $^
 
 %.o: %.c
